# vata

./: .gitignore  README.md  README_API_TESTING.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ConfirmModal.tsx  HierarchicalTree.tsx  Layout.tsx  Navigation.tsx  ToastContainer.tsx
frontend/src/contexts/: ToastContext.tsx
frontend/src/pages/: Form.tsx  History.tsx  Home.tsx  ManageAssets.tsx
frontend/src/services/: aiService.ts  assetService.ts  categoryService.ts  decisionService.ts
src/vata/: cli.py  main.py
src/vata/agents/: __init__.py  config.json  config_loader.py  runner.py
src/vata/services/: ai_service.py  category_service.py  decision_service.py
