[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vata"
version = "0.1.0"
description = "Vata - A local-first knowledge graph application"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Vata Project Team" },
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "typer>=0.12.3",
    "litellm",
    "langchain",
    "langchain-community",
    "langchain-core",
]

[project.scripts]
vata = "vata.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vata"]
